--- a/src/component/Button.css
+++ b/src/component/Button.css
@@ -5,6 +5,7 @@
     padding: 10px 20px;
     font-size: 18px;
     white-space: nowrap;
+    font-family: "Nanum Pen Script";
 }
 
 .Button_default {
